# landingpage

./: Cargo.toml  Trunk.toml  index.html  shell.nix  tailwind.config.js
.github/workflows/: rust.yml
src/: main.rs
src/components/: linking.rs  mod.rs  particle.rs  particle_loader.rs  pill.rs
styles/: tailwind.css
