[package]
name = "landingpage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
uuid = { version = "1.3.0", features = ["js"] }
yew = { version = "0.21.0", features = ["csr"] }
rand = "0.8.5"
wasm-logger = "0.2.0"
